[황다영] 뒤로가기 기능 추가

--- a/src/views/_layouts/header-w.ejs
+++ b/src/views/_layouts/header-w.ejs
@@ -24,7 +24,7 @@
     <body>
         <header id="header">
             <!-- 뒤로가기 -->
-            <button type="button" class="backButtonWhite"></button>
+            <button type="button" class="backButtonWhite" onclick="window.history.back();"></button>
             <!-- 로고 -->
             <a href="http://localhost:4000/posts">
                 <img src="/static/images/nanum-logo-w.png" alt="나눔숲" />
