--- a/src/views/_layouts/header.ejs
+++ b/src/views/_layouts/header.ejs
@@ -31,14 +31,14 @@
     <body>
         <header id="header">
             <!-- 뒤로가기 -->
-            <button type="button" class="backButtonWhite"></button>
+            <button type="button" class="backButton" onclick="window.history.back();"></button>
             <!-- 로고 -->
             <a href="http://localhost:4000/posts">
               <img src="/static/images/nanum-logo.png" alt="나눔숲" />
             </a>
             <button
                 type="button"
-                class="searchButtonWhite"
+                class="searchButton"
                 onclick="openSearchPopup()"
             ></button>
             <!-- search -->
