[황다영]게시글 목록 글쓰기 버튼 생성

--- a/src/views/client/posts/postList.ejs
+++ b/src/views/client/posts/postList.ejs
@@ -163,12 +163,21 @@
             <% }); %>
             <!--  대댓글 작성 영역 끝 -->
           </section>
-         
+
 
         <% }); %>
         <!-- 반복 끝 -->
+
       </div>
       <!-- inner 끝 -->
+      <!--  글쓰기 버튼 플로팅 -->
+      <div class="floatingMenu">
+          <!-- 현재 카테고리 플로팅 메뉴 -->
+          <span>&#128221; 글 쓰기</span>
+        <!-- 글쓰기 버튼 -->
+        <a href="/posts/write"><i class="fa-solid fa-pen"></i></a>
+        <!-- <button type="button"><i class="fa-solid fa-pen"></i></button> -->
+    </div>
     </div>
     <!-- wrap 끝 -->
 
