카테고리 CSS 수정

--- a/src/views/_layouts/header-menu-w.ejs
+++ b/src/views/_layouts/header-menu-w.ejs
@@ -194,7 +194,7 @@
                 });
 
                 confirmBtn.addEventListener("click", function () {
-                    window.location.href = "/views/login";
+                    window.location.href = "/login";
                 });
             });
         </script>
