--- a/src/views/_layouts/header-menu.ejs
+++ b/src/views/_layouts/header-menu.ejs
@@ -76,9 +76,7 @@
                         </a>
                     </div>
                 </div>
-            </section>
-
-            <!-- 로그아웃 창 -->
+                <!-- 로그아웃 창 -->
             <div id="logout-popup" class="logout-popup hidden">
                 <div class="popup-content">
                     <p>로그아웃 하시겠습니까?</p>
@@ -90,6 +88,9 @@
                     </div>
                 </div>
             </div>
+            </section>
+
+            
       
         <!-- 검색팝업 -->
         <div class="search-wrapper">
@@ -178,7 +179,7 @@
                 });
 
                 confirmBtn.addEventListener("click", function () {
-                    window.location.href = "/views/login";
+                    window.location.href = "/login";
                 });
             });
         </script>
