--- a/public/styles/pages/posts/postDetail.css
+++ b/public/styles/pages/posts/postDetail.css
@@ -238,6 +238,7 @@ a {
   justify-content: space-between;
   width: 100%;
   flex-wrap: wrap;
+  padding: 10px 0;
 }
 
 .commentSingle img {
@@ -267,7 +268,7 @@ a {
 }
 
 /* 달려있는 댓글 */
-.commentArea p {
+.commentArea p, .commentUser p {
   margin: 0;
   overflow: hidden;
   white-space: nowrap;
@@ -296,7 +297,7 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 5px 0;
+  /* padding: 2.5px 0; */
   /* padding-left: auto; */
 }
 
@@ -416,16 +417,18 @@ a {
   }
 
   .commentArea p,
-  .commentWrite {
+  .commentWrite,
+  .commentUser p {
     width: 85%;
   }
 
   .commentArea .profileImg {
-    max-width: 40px;
+    
   }
-  .commentArea .profileImg {
-    width: 40px;
-    height: 40px;
+  .commentArea .profileImg, .commentSingle .profileImg, .commentWriteWrapDouble .profileImg {
+    max-width: 30px;
+    width: 30px;
+    height: 30px;
   }
 
   .floatingMenu {
