[황다영] 댓글 리스트 오류 수정

--- a/src/views/client/posts/postDetail.ejs
+++ b/src/views/client/posts/postDetail.ejs
@@ -248,7 +248,8 @@
         event.stopPropagation();
       }
 
-      // 답글달기 버튼 클릭 시 작성영역 보이기
+
+      // 답글달기 버튼 클릭 시에만 작성영역 보이기
       function toggleReplyArea(button) {
         const replyArea = button.closest(".commentSingle").nextElementSibling;
 
