[황다영] 로그인/회원가입 css 부분 수정

--- a/public/styles/pages/posts/postWrite.css
+++ b/public/styles/pages/posts/postWrite.css
@@ -155,3 +155,12 @@ button[type="submit"] {
 }
 
 
+
+
+
+/* 태블릿 */
+@media (min-width: 768px) {
+  #wrap .container {
+    padding: 5% 15px 10px 15px;
+  }
+}
