--- a/public/styles/init.css
+++ b/public/styles/init.css
@@ -151,6 +151,9 @@ button[type="submit"] {
 }
 
 input[type="text"],
+input[type="password"],
+input[type="email"],
+textarea,
 select {
     border: none;
     outline: none;
