--- a/public/styles/pages/users/login.css
+++ b/public/styles/pages/users/login.css
@@ -41,6 +41,7 @@ label {
   height: 55px;
   background-color: #efffe5;
   border-radius: 10px;
+
 }
 
 input[type="password"] {
@@ -74,4 +75,16 @@ input[type="password"] {
 
 .signup {
   color: var(--sub-color-1);
+}
+
+
+
+
+.form-control {
+  padding: 0 10px;
+}
+
+
+input[type="text"]:focus, input[type="password"]:focus {
+  outline: 2px solid var(--sub-color-3);
 }
