[황다영] 게시글 답글달기 css 부분수정

--- a/public/styles/pages/posts/postDetail.css
+++ b/public/styles/pages/posts/postDetail.css
@@ -416,11 +416,24 @@ a {
     gap: 10px;
   }
 
+  .commentWriteWrapDouble::before {
+    content: '\f35a';
+    display: inline-block;
+    font-family: "Font Awesome 5 Free";
+    font-weight: 600;
+    color: #9e9e9e;
+  }
+
   .commentArea p,
   .commentWrite,
   .commentUser p {
     width: 85%;
   }
+
+  .commentWriteWrapDouble .commentWrite {
+    width: 83%;
+  }
+
 
   .commentArea .profileImg {
     
