--- a/src/views/client/posts/postDetail.ejs
+++ b/src/views/client/posts/postDetail.ejs
@@ -63,7 +63,7 @@
               <!-- <i class="fa-solid fa-heart"></i>  -->
               10
             </div>
-            <div>
+            <div class="commentButton">
               <!-- 코멘트 없을 때 -->
               <!-- <i class="fa-regular fa-comment"></i> -->
               <i class="fa-solid fa-comment"></i>
@@ -83,6 +83,7 @@
           <!-- 전체 댓글 영역 시작 (작성 및 수정, 삭제, 대댓글) -->
           <% post.comments.forEach((comment) => { %>
           <div class="commentArea">
+           
             <!-- 댓글 작성 영역 시작 -->
             <div class="commentWriteWrap">
               <!-- 유저 프로필 이미지 -->
@@ -102,7 +103,7 @@
             <!-- 댓글 작성 영역 끝 -->
 
             <!-- 댓글 리스트 시작 -->
-           
+ 
                 <div class="commentSingle">
                 <!-- 유저 프로필 이미지 -->
                 <img src="/static/images/profile.webp" alt="프로필 이미지" class="profileImg" />
@@ -285,6 +286,7 @@
           console.error("댓글 작성에 실패했습니다.");
         }
       });
+
     </script>
   </body>
 </html>
