[황다영] 메인 더보기 버튼 숨김

--- a/public/styles/pages/posts/postList.css
+++ b/public/styles/pages/posts/postList.css
@@ -21,7 +21,7 @@ section {
 }
 
 .viewMore {
-  
+  display: none;
 }
 
 
@@ -33,4 +33,4 @@ section {
   .commentArea p {
     width: 100%;
   }
-} 
+} `
